Fix invalid rewrite regex for SPA

--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
       "destination": "/api/feedback/general"
     },
     {
-      "source": "/((?!api($|/)).*)",
+      "source": "/:path*",
       "destination": "/index.html"
     }
   ]
